Fix the action buttons not showing up for the selected item

--- a/src/public/stylesheets/theme-next.css
+++ b/src/public/stylesheets/theme-next.css
@@ -278,6 +278,7 @@
     box-shadow: var(--left-pane-item-selected-shadow);
     border-radius: 6px;
     animation: left-pane-item-select 200ms ease-out;
+    z-index: -1;
 }
 
 #left-pane .fancytree-custom-icon {
